fix(Permission) : add annotation EqualsAndHashCode.Include for field name